[iOS] ResourceLoadStatistics state is not properly relayed to the NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=198692 <rdar://problem/51538088>

Reviewed by Maciej Stachowiak.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::setResourceLoadStatisticsEnabled): Message the NetworkProcess
on state change.


Canonical link: https://commits.webkit.org/212685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246248 268f45cc-cd09-0410-ab3c-d52691b4dbfc